Se creó con Colab

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvT7zkJ/3CHAqVh74tkHdy",
+      "authorship_tag": "ABX9TyPCP7+jfGz1iH99lxO1cBsj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -427,9 +427,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wjrlZlVELUXi",
-        "outputId": "62ea1200-6321-4713-ee28-79b5dab02396"
+        "outputId": "686bd7fc-6199-4b44-c6a7-b6eb00b3e3a3"
       },
-      "execution_count": 77,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,6 +442,77 @@
           ]
         }
       ]
+    },
+    {
+      "source": [
+        "# Add an argument to the generate_image function for the selected class\n",
+        "def generate_image(selected_class):\n",
+        "    z = torch.randn(1, latent_size).to(device)\n",
+        "    # Assuming your generator needs the class information\n",
+        "    generated_image = generator(z, selected_class) # Pass selected_class to the generator\n",
+        "    return generated_image"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "7sEHs1fXMEEt"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Se4fFUasMPCv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "source": [
+        "import streamlit as st\n",
+        "import torch\n",
+        "from torch import nn\n",
+        "from torchvision.utils import save_image\n",
+        "# ... rest of your imports and code ...\n",
+        "\n",
+        "# Assuming you have a ConditionalGenerator class defined\n",
+        "class ConditionalGenerator(nn.Module):\n",
+        "    def __init__(self, latent_size, num_classes):\n",
+        "        super(ConditionalGenerator, self).__init__()\n",
+        "        # Define your generator architecture here\n",
+        "        self.label_emb = nn.Embedding(num_classes, latent_size)\n",
+        "        self.model = nn.Sequential(\n",
+        "            nn.Linear(latent_size * 2, 256),\n",
+        "            nn.ReLU(True),\n",
+        "            nn.Linear(256, 512),\n",
+        "            nn.ReLU(True),\n",
+        "            nn.Linear(512, 1024),\n",
+        "            nn.ReLU(True),\n",
+        "            nn.Linear(1024, 784),\n",
+        "            nn.Tanh()\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, noise, labels):\n",
+        "        # Concatenate label embedding and noise\n",
+        "        gen_input = torch.cat((self.label_emb(labels), noise), -1)\n",
+        "        img = self.model(gen_input)\n",
+        "        img = img.view(img.size(0), 1, 28, 28)\n",
+        "        return img\n",
+        "\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "latent_size = 100\n",
+        "num_classes = 10\n",
+        "\n",
+        "# Ensure the model architecture matches the one used to create the saved state dictionary.\n",
+        "#"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "9dl3HIetMPfD"
+      },
+      "execution_count": 85,
+      "outputs": []
     }
   ]
 }
